fixed bug where firefox was cutting off image on print

--- a/css/diagram_print.css
+++ b/css/diagram_print.css
@@ -4,6 +4,9 @@
 
 // --------------------------------------------------------------------------------------------------------------------
 */
+* {
+overflow: visible !important;
+}
 
 #pi_html {
 	margin-left: auto;
